Bug 253851 - bug commit in Launchpad raises error "The following errors were encountered: Object: , name: u'https'"
Summary: bug commit in Launchpad raises error "The following errors were encountered: ...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdewebkit (other bugs)
Version First Reported In: 0.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
: 253076 254710 257132 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-11 16:50 UTC by Ferdinand Gassauer
Modified: 2010-12-03 10:21 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ferdinand Gassauer 2010-10-11 16:50:52 UTC
Version:           0.0.1 (using KDE 4.5.2) 
OS:                Linux

The following errors were encountered:
Object: , name: u'https'

Reproducible: Always




OS: Linux (x86_64) release 2.6.34.7-0.3-desktop
Compiler: gcc
Comment 1 Ferdinand Gassauer 2010-10-11 16:52:10 UTC
using webkit
Comment 2 Christoph Feck 2010-10-11 20:16:05 UTC
Which browser are you using (rekonq, arora, konqueror, or other)?
Comment 3 Ferdinand Gassauer 2010-10-12 06:52:08 UTC
konqueror + webkit
Comment 4 Christoph Feck 2010-10-20 03:00:29 UTC
*** Bug 254710 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2010-11-17 13:42:34 UTC
*** Bug 257132 has been marked as a duplicate of this bug. ***
Comment 6 Dawit Alemayehu 2010-11-29 17:40:10 UTC
Dunno how to test this... Is there any invalid ticket i can attempt to comment on to reproduce the issue ?
Comment 7 Ferdinand Gassauer 2010-11-29 18:58:16 UTC
thanks for looking into this

try this - just write "test commit konqueror"
https://bugs.launchpad.net/bugs/682761

you may need to register first.
Comment 8 Kubuntiac 2010-11-30 04:51:56 UTC
You don't need to actually file a bug to get this error. Just leaving a comment on a bug triggers this error, too. I get it even now with Rekonq. I'm using the daily unstable rekonq ppa (v0.6.55) and KDE 4.5.3 with QT 4.7.0
Comment 9 Dawit Alemayehu 2010-11-30 09:39:42 UTC
SVN commit 1202245 by adawit:

Fixed website breakage in kdewebkit based browsers caused by improper parsing of HTTP repsonse headers!

BUG:253851
BUG:253310


 M  +19 -16    accessmanagerreply_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1202245
Comment 10 Dawit Alemayehu 2010-12-03 10:21:44 UTC
*** Bug 253076 has been marked as a duplicate of this bug. ***