Fixed website breakage in kdewebkit based browsers caused by improper parsing of HTTP repsonse headers!

BUG:253851
BUG:253310

svn path=/trunk/KDE/kdelibs/; revision=1202245